--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/Body.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/Body.mxml
@@ -3,13 +3,16 @@
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="100%" width="100%">
+		  height="100%"
+		  width="100%">
 
 
-	<components:WorkArea id="workArea" 
-		width="100%" height="100%" />
-	
-	<components:DataTablesTree id="dataTablesTree" 
-							   width="180" height="100%" />
+	<components:WorkArea id="workArea"
+						 width="100%"
+						 height="100%"/>
+
+	<components:DataTablesTree id="dataTablesTree"
+							   width="180"
+							   height="100%"/>
 
 </s:HGroup>
