--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/CheckBoxItemRenderers.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/CheckBoxItemRenderers.mxml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:MXDataGridItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-						  xmlns:s="library://ns.adobe.com/flex/spark" 
-						  xmlns:mx="library://ns.adobe.com/flex/mx" 
-						  focusEnabled="true" width="100%" height="100%">
+<s:MXDataGridItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
+						  xmlns:s="library://ns.adobe.com/flex/spark"
+						  xmlns:mx="library://ns.adobe.com/flex/mx"
+						  focusEnabled="true"
+						  width="100%"
+						  height="100%">
 	<fx:Metadata>
 		[Event(name="change", type="flash.events.Event")]
 	</fx:Metadata>
-	
+
 	<fx:Script>
 		<![CDATA[
-
 			override public function set data( value : Object ) : void
 			{
 				super.data = value;
 			}
-			
+
 			private var _selectedCheck : Boolean;
-			
+
 			[Bindable]
-			public function get selectedCheck():Boolean
+			public function get selectedCheck() : Boolean
 			{
 				return _selectedCheck;
 			}
-			
-			public function set selectedCheck(value:Boolean):void
+
+			public function set selectedCheck( value : Boolean ) : void
 			{
 				_selectedCheck = value;
-				dispatchEvent( new Event ( Event.CHANGE ) );
+				dispatchEvent( new Event( Event.CHANGE ) );
 			}
 
-			
-			protected function chkData_changeHandler(event:Event):void
+
+			protected function chkData_changeHandler( event : Event ) : void
 			{
 				// TODO Auto-generated method stub
 				selectedCheck = chkData.selected;
 			}
-			
 		]]>
 	</fx:Script>
-	<s:VGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="center">
-		<s:CheckBox id="chkData" selected="{selectedCheck}" change="chkData_changeHandler(event)"/>
+	<s:VGroup width="100%"
+			  height="100%"
+			  verticalAlign="middle"
+			  horizontalAlign="center">
+		<s:CheckBox id="chkData"
+					selected="{selectedCheck}"
+					change="chkData_changeHandler(event)"/>
 	</s:VGroup>
-	
+
 </s:MXDataGridItemRenderer>
