--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/Thumbnail.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/Thumbnail.mxml
@@ -9,14 +9,12 @@
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			import mx.binding.utils.ChangeWatcher;
-			
+
 			import net.vdombox.ide.common.model._vo.ResourceVO;
-			
+
 			import spark.filters.DropShadowFilter;
 
-			[Embed( source="assets/rect.png",
-				scaleGridTop="10", scaleGridBottom="70",
-				scaleGridLeft="10", scaleGridRight="70" )]
+			[Embed( source = "assets/rect.png", scaleGridTop = "10", scaleGridBottom = "70", scaleGridLeft = "10", scaleGridRight = "70" )]
 			[Bindable]
 			public var thumb : Class;
 
@@ -61,20 +59,38 @@
 	</s:Rect>-->
 
 	<s:Group id="noPreview"
-			 bottom="15" left="15" right="15" textAlign="center"
+			 bottom="15"
+			 left="15"
+			 right="15"
+			 textAlign="center"
 			 top="15"
-			 itemCreationPolicy="immediate" includeIn="nopreview">
+			 itemCreationPolicy="immediate"
+			 includeIn="nopreview">
 
 		<s:RichText text="no preview"
-					bottom="0" color="#808080" fontWeight="bold" left="0"
-					right="0" textAlign="center" top="0" verticalAlign="middle"/>
+					bottom="0"
+					color="#808080"
+					fontWeight="bold"
+					left="0"
+					right="0"
+					textAlign="center"
+					top="0"
+					verticalAlign="middle"/>
 	</s:Group>
 
 	<mx:Image id="image"
-			  bottom="15" left="15" right="15" top="15"
-			  includeIn="image" itemCreationPolicy="immediate"/>
+			  bottom="15"
+			  left="15"
+			  right="15"
+			  top="15"
+			  includeIn="image"
+			  itemCreationPolicy="immediate"/>
 
 	<mx:Image source="{ thumb }"
-			  bottom="0" left="0" right="0" top="0"
-			  smoothBitmapContent="true" maintainAspectRatio="false"/>
+			  bottom="0"
+			  left="0"
+			  right="0"
+			  top="0"
+			  smoothBitmapContent="true"
+			  maintainAspectRatio="false"/>
 </s:Group>
